[gd_scene load_steps=2 format=3 uid="uid://bsruoqtb6cvp5"]

[ext_resource type="Script" path="res://wrist_ui.gd" id="1_jcibm"]

[node name="WristUI" type="PanelContainer"]
offset_right = 256.0
offset_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jcibm")

[node name="Panel" type="TabContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="GContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GContainer"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="MarginContainer/GContainer/HBoxContainer"]
layout_mode = 2

[node name="HeightLabel" type="Label" parent="MarginContainer/GContainer/HBoxContainer"]
layout_mode = 2
text = "Override player height
"

[node name="HeightSlider" type="HSlider" parent="MarginContainer/GContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 2.5
step = 0.05
value = 1.0
editable = false

[node name="HSeparator" type="HSeparator" parent="MarginContainer/GContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/GContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MenuButton" type="Button" parent="MarginContainer/GContainer/HBoxContainer3"]
layout_mode = 2
text = "Menu"

[node name="QuitButton" type="Button" parent="MarginContainer/GContainer/HBoxContainer3"]
layout_mode = 2
text = "Exit game"
